--- a/webmaerd/templates/base/footer.html
+++ b/webmaerd/templates/base/footer.html
@@ -6,10 +6,10 @@
                 <h6 class="text-white mb-10 mt-10 text-uppercase">{% trans "Navigation" %}:</h6>
                 <div class="footer-social">
                     <ul>
-                        <li class="list-inline-item"><a href="/">{% trans "Home" %}</a>&nbsp;&nbsp;&nbsp;|</li>
-                        <li class="list-inline-item"><a href="/portfolio">{% trans "Portfolio" %}</a>&nbsp;&nbsp;&nbsp;|</li>
-                        <li class="list-inline-item"><a href="/contact">{% trans "Contact Us" %}</a>&nbsp;&nbsp;&nbsp;|</li>
-                        <li class="list-inline-item"><a href="/faq">{% trans "FAQ" %}</a></li>
+                        <li class="list-inline-item"><a href="/{{ LANGUAGE_CODE }}/">{% trans "Home" %}</a>&nbsp;&nbsp;&nbsp;|</li>
+                        <li class="list-inline-item"><a href="/{{ LANGUAGE_CODE }}/portfolio">{% trans "Portfolio" %}</a>&nbsp;&nbsp;&nbsp;|</li>
+                        <li class="list-inline-item"><a href="/{{ LANGUAGE_CODE }}/contact">{% trans "Contact Us" %}</a>&nbsp;&nbsp;&nbsp;|</li>
+                        <li class="list-inline-item"><a href="/{{ LANGUAGE_CODE }}/faq">{% trans "FAQ" %}</a></li>
                     </ul>
                 </div>
 
