--- a/webmaerd/templates/base/head.html
+++ b/webmaerd/templates/base/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="Webmaerd, Web Development, Web Design, web, domain, hosting, development, agency, webpage, website, site, site creation, order site, order webpage, programming"/>
-    <meta name="description" content="Webmaerd - {% trans "web development agency" %}"/>
+    <meta name="description" content="Webmaerd - {% trans 'web development agency' %}"/>
     <meta name="author" content="webmaerd.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <title>Webmaerd - {% trans "web development agency" %}</title>
