--- a/webmaerd/templates/base/header.html
+++ b/webmaerd/templates/base/header.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-{% get_current_language as LANGUAGE_CODE %}
 {% load staticfiles %}
 
 <header id="header" class="header default">
@@ -44,15 +43,15 @@
                         <div class="col-lg-12 col-md-12">
                             <!-- menu logo -->
                             <ul class="menu-logo">
-                                <li><a href="/"><img id="logo_img" src="/static/images/logo.png" alt="logo"></a></li>
+                                <li><a href="/{{ LANGUAGE_CODE }}/"><img id="logo_img" src="/static/images/logo.png" alt="logo"></a></li>
                             </ul>
                             <!-- menu links -->
                             <div class="menu-bar">
                                 <ul class="menu-links">
-                                    <li><a href="/">{% trans "Home" %}</a></li>
-                                    <li><a href="/portfolio">{% trans "Portfolio" %}</a></li>
-                                    <li><a href="/faq">{% trans "FAQ" %}</a></li>
-                                    <li><a href="/contact">{% trans "Contact Us" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/">{% trans "Home" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/portfolio">{% trans "Portfolio" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/faq">{% trans "FAQ" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/contact">{% trans "Contact Us" %}</a></li>
                                     <li>
                                         {% get_current_language as LANGUAGE_CODE %}
                                         {% get_available_languages as LANGUAGES %}
