--- a/webmaerd/templates/base/footer.html
+++ b/webmaerd/templates/base/footer.html
@@ -23,10 +23,11 @@
             <div class="col-lg-4 col-sm-4 xs-mb-10 text-left text-md-right">
                 <div class="social-icons color-hover mt-10">
                     <ul>
-                        <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li class="social-facebook"><a href="https://www.facebook.com/groups/webmaerd"><i class="fa fa-facebook"></i></a></li>
+                        <li class="social-twitter"><a href="https://www.instagram.com/webmaerd/"><i class="fa fa-instagram"></i></a></li>
+                        <li class="social-twitter"><a href="https://twitter.com/webmaerd_com"><i class="fa fa-twitter"></i></a></li>
+                        <li class="social-linkedin"><a href="https://www.linkedin.com/groups/12118604"><i class="fa fa-linkedin"></i></a></li>
+                        <li class="social-facebook"><a href="https://vk.com/webmaerd"><i class="fa fa-vk"></i></a></li>
                     </ul>
                 </div>
             </div>
