--- a/webmaerd/templates/base/header.html
+++ b/webmaerd/templates/base/header.html
@@ -18,11 +18,11 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="topbar-social text-center text-md-right">
                         <ul>
-                            <li><a href="#"><span class="ti-facebook"></span></a></li>
-                            <li><a href="#"><span class="ti-instagram"></span></a></li>
-                            <li><a href="#"><span class="ti-google"></span></a></li>
-                            <li><a href="#"><span class="ti-twitter"></span></a></li>
-                            <li><a href="#"><span class="ti-linkedin"></span></a></li>
+                            <li><a href="https://www.facebook.com/groups/webmaerd"><span class="ti-facebook"></span></a></li>
+                            <li><a href="https://www.instagram.com/webmaerd/"><span class="ti-instagram"></span></a></li>
+                            <li><a href="https://twitter.com/webmaerd_com"><span class="ti-twitter"></span></a></li>
+                            <li><a href="https://www.linkedin.com/groups/12118604"><span class="ti-linkedin"></span></a></li>
+                            <li><a href="https://vk.com/webmaerd"><span class="fa fa-vk"></span></a></li>
                         </ul>
                     </div>
                 </div>
