--- a/webmaerd/templates/base/head.html
+++ b/webmaerd/templates/base/head.html
@@ -2,11 +2,22 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Webmaerd, Web Development, Web Design, web, domain, hosting, development, agency, webpage, website, site, site creation, order site, order webpage, programming"/>
-    <meta name="description" content="Webmaerd - {% trans 'web development agency' %}"/>
+    <meta name="keywords" content="{% trans 'Webmaerd, Web Development, Web Design, web, domain, hosting, development, agency, web page, website, site, site creation, order site, order web page, programming' %}"/>
+    <meta name="description" content="{% trans 'Webmaerd is Web Development and Web Design Agency. Professional websites creation at a reasonable price in a short time. We deal with modern and professional sites development for small and medium business. Additional services provided: Domains and Hosting support.' %}"/>
     <meta name="author" content="webmaerd.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <title>Webmaerd - {% trans "web development agency" %}</title>
+    <!-- Open Graph -->
+    <meta property="og:image" content="/static/images/logo.png" />
+    <meta property="og:title" content="Webmaerd: {% trans 'Web Development and Web Design Agency. Websites creation' %}"/>
+    <meta property="og:description" content="{% trans 'Webmaerd is Web Development and Web Design Agency. Professional websites creation at a reasonable price in a short time. We deal with modern and professional sites development for small and medium business. Additional services provided: Domains and Hosting support.' %}"/>
+    <meta property="og:url" content="http://webmaerd.com" />
+    <!-- Twitter Card -->
+    <meta property="twitter:image" content="/static/images/logo.png" />
+    <meta property="twitter:title" content="Webmaerd: {% trans 'Web Development and Web Design Agency. Websites creation' %}"/>
+    <meta property="twitter:description" content="{% trans 'Webmaerd is Web Development and Web Design Agency. Professional websites creation at a reasonable price in a short time. We deal with modern and professional sites development for small and medium business. Additional services provided: Domains and Hosting support.' %}"/>
+    <meta property="twitter:site" content="http://webmaerd.com" />
+
+    <title>Webmaerd: {% trans "Web Development and Web Design Agency. Websites creation" %}</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/static/images/favicon.ico"/>
