--- a/webmaerd/templates/base/header.html
+++ b/webmaerd/templates/base/header.html
@@ -5,24 +5,34 @@
     <div class="topbar">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 xs-mb-10">
-                    <div class="topbar-call text-center text-md-left">
+                <div class="col-lg-3 col-md-12" align="center">
+                    <div class="topbar-call text-center text-md-center">
                         <ul>
                             <li><i class="fa fa-envelope-o theme-color"></i> contact@webmaerd.com</li>
                             <!--<li><i class="fa fa-phone"></i> -->
-                            <!--<a href="tel:+0000000000"><span>+(000) 000-0000 </span></a>-->
+                            <!--<a href="tel:+0000000000" title="Phone"><span>+(000) 000-0000 </span></a>-->
                             <!--</li>-->
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="topbar-social text-center text-md-right">
+                <div class="col-lg-6 col-md-12" align="center">
+                    <div class="topbar-social text-center text-md-center">
                         <ul>
-                            <li><a href="https://www.facebook.com/groups/webmaerd"><span class="ti-facebook"></span></a></li>
-                            <li><a href="https://www.instagram.com/webmaerd/"><span class="ti-instagram"></span></a></li>
-                            <li><a href="https://twitter.com/webmaerd_com"><span class="ti-twitter"></span></a></li>
-                            <li><a href="https://www.linkedin.com/groups/12118604"><span class="ti-linkedin"></span></a></li>
-                            <li><a href="https://vk.com/webmaerd"><span class="fa fa-vk"></span></a></li>
+                            <li><h1 class="h1-header" align="center">Webmaerd: Web Development and Web Design Agency</h1></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-12" align="center">
+                    <div class="topbar-social text-center text-md-center">
+                        <ul>
+                            <li><a href="https://www.facebook.com/groups/webmaerd" title="facebook"><span class="ti-facebook"></span></a>
+                            </li>
+                            <li><a href="https://www.instagram.com/webmaerd/" title="instagram"><span class="ti-instagram"></span></a>
+                            </li>
+                            <li><a href="https://twitter.com/webmaerd_com" title="twitter"><span class="ti-twitter"></span></a></li>
+                            <li><a href="https://www.linkedin.com/groups/12118604" title="linkedin"><span class="ti-linkedin"></span></a>
+                            </li>
+                            <li><a href="https://vk.com/webmaerd" title="vkontakte"><span class="fa fa-vk"></span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -43,15 +53,16 @@
                         <div class="col-lg-12 col-md-12">
                             <!-- menu logo -->
                             <ul class="menu-logo">
-                                <li><a href="/{{ LANGUAGE_CODE }}/"><img id="logo_img" src="/static/images/logo.png" alt="logo"></a></li>
+                                <li><a href="/{{ LANGUAGE_CODE }}/" title="Logo Webmaerd"><img id="logo_img" src="/static/images/logo.png"
+                                                                         alt="logo"></a></li>
                             </ul>
                             <!-- menu links -->
                             <div class="menu-bar">
                                 <ul class="menu-links">
-                                    <li><a href="/{{ LANGUAGE_CODE }}/">{% trans "Home" %}</a></li>
-                                    <li><a href="/{{ LANGUAGE_CODE }}/portfolio">{% trans "Portfolio" %}</a></li>
-                                    <li><a href="/{{ LANGUAGE_CODE }}/faq">{% trans "FAQ" %}</a></li>
-                                    <li><a href="/{{ LANGUAGE_CODE }}/contact">{% trans "Contact Us" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/" title="Homepage">{% trans "Home" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/portfolio" title="Portfolio">{% trans "Portfolio" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/faq" title="FAQ">{% trans "FAQ" %}</a></li>
+                                    <li><a href="/{{ LANGUAGE_CODE }}/contact" title="Contact">{% trans "Contact Us" %}</a></li>
                                     <li>
                                         {% get_current_language as LANGUAGE_CODE %}
                                         {% get_available_languages as LANGUAGES %}
@@ -60,19 +71,19 @@
                                         {% if LANGUAGE_CODE == 'en' %}
                                         <input name="language" type="hidden" value="en"/>
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                           aria-expanded="false"><img src="/static/images/flags/en-flag.png"
+                                           aria-expanded="false" title="ENG"><img src="/static/images/flags/en-flag.png"
                                                                       alt="ENG">&nbsp; English</a>
                                         {% endif %}
                                         {% if LANGUAGE_CODE == 'ru' %}
                                         <input name="language" type="hidden" value="ru"/>
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                           aria-expanded="false"><img src="/static/images/flags/ru-flag.png"
+                                           aria-expanded="false" title="RU"><img src="/static/images/flags/ru-flag.png"
                                                                       alt="RU">&nbsp; Русский</a>
                                         {% endif %}
                                         {% if LANGUAGE_CODE == 'pl' %}
                                         <input name="language" type="hidden" value="it"/>
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                           aria-expanded="false"><img src="/static/images/flags/pl-flag.png"
+                                           aria-expanded="false" title="PL"><img src="/static/images/flags/pl-flag.png"
                                                                       alt="PL">&nbsp; Polski</a>
                                         {% endif %}
                                         <ul class="drop-down-multilevel" id="language-switcher">
@@ -82,13 +93,13 @@
                                             {% for language in languages %}
                                             {% if language.code != LANGUAGE_CODE %}
                                             {% with 'images/flags/'|add:language.code|add:'-flag.png' as image_static %}
-                                                <li>
-                                                    <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
-                                                       lang="{{ language.code }}" style="padding: 10px 10px;">
-                                                        <img src="{% static image_static %}" style="vertical-align:sub"
-                                                             alt="">&nbsp;&nbsp;{{ language.name_local }}
-                                                    </a>
-                                                </li>
+                                            <li>
+                                                <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
+                                                   lang="{{ language.code }}" style="padding: 10px 10px;" title="{{ language.code }}">
+                                                    <img src="{% static image_static %}" style="vertical-align:sub"
+                                                         alt="{{ language.code }}">&nbsp;&nbsp;{{ language.name_local }}
+                                                </a>
+                                            </li>
                                             {% endwith %}
                                             {% endif %}
                                             {% endfor %}
