--- a/webmaerd/templates/contact.html
+++ b/webmaerd/templates/contact.html
@@ -15,8 +15,9 @@ page-title-->
                     <p>{% trans "We know the secret of your success" %}</p>
                 </div>
                 <ul class="page-breadcrumb">
-                    <li><a href="/{{ LANGUAGE_CODE }}/"><i class="fa fa-home"></i> {% trans "Home" %}</a> <i
-                            class="fa fa-angle-double-right"></i></li>
+                    <li><a href="/{{ LANGUAGE_CODE }}/" title="Homepage">
+                        <i class="fa fa-home"></i> {% trans "Home" %}</a>
+                        <i class="fa fa-angle-double-right"></i></li>
                     <li><span>{% trans "Contact" %}</span></li>
                 </ul>
             </div>
@@ -119,13 +120,15 @@ page-title -->
                         <!-- <div class="g-recaptcha section-field clearfix" data-sitekey="[Add your site key]"></div> -->
                         <div class="submit-button text-center">
                             <input type="hidden" name="action" value="sendEmail">
-                            <button id="submit" name="submit" type="submit" value="Send" class="button"><span> {% trans "Send message" %} </span>
+                            <button id="submit" name="submit" type="submit" value="Send" class="button">
+                                <span> {% trans "Send message" %} </span>
                                 <i class="fa fa-paper-plane"></i></button>
                         </div>
                     </div>
                 </form>
-                <div id="ajaxloader" style="display:none"><img class="mx-auto mt-30 mb-30 d-block"
-                                                               src="/static/images/pre-loader/loader-01.svg" alt="">
+                <div id="ajaxloader" style="display:none">
+                    <img class="mx-auto mt-30 mb-30 d-block" src="/static/images/pre-loader/loader-01.svg"
+                         alt="pre-loader">
                 </div>
             </div>
         </div>
