--- a/webmaerd/templates/success_page.html
+++ b/webmaerd/templates/success_page.html
@@ -16,7 +16,10 @@ page-title-->
                     <p>{% trans "We know the secret of your success" %}</p>
                 </div>
                 <ul class="page-breadcrumb">
-                    <li><a href="/"><i class="fa fa-home"></i> {% trans "Home" %}</a> <i class="fa fa-angle-double-right"></i></li>
+                    <li><a href="/{{ LANGUAGE_CODE }}/" title="Homepage">
+                        <i class="fa fa-home"></i> {% trans "Home" %}</a>
+                        <i class="fa fa-angle-double-right"></i>
+                    </li>
                     <li><span>{% trans "Success page" %}</span></li>
                 </ul>
             </div>
