--- a/webmaerd/templates/base/footer.html
+++ b/webmaerd/templates/base/footer.html
@@ -29,7 +29,10 @@
                         <li class="social-linkedin"><a href="https://www.linkedin.com/groups/12118604" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
                         <li class="social-facebook"><a href="https://vk.com/webmaerd" title="vkontakte"><i class="fa fa-vk"></i></a></li>
                     </ul>
-                    <iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwebmaerd.com%2F&width=160&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=409758692827944" width="160" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                    <ul>
+                        <li><iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwebmaerd.com%2F&width=160&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=182157069171409" width="160" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></li>
+                        <li><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="http://webmaerd.com/" data-hashtags="Webmaerd" data-related="webmaerd_com" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+                    </ul>
                 </div>
             </div>
         </div>
