--- a/webmaerd/templates/base/head.html
+++ b/webmaerd/templates/base/head.html
@@ -7,15 +7,15 @@
     <meta name="author" content="webmaerd.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <!-- Open Graph -->
-    <meta property="og:image" content="/static/images/logo.png" />
-    <meta property="og:title" content="Webmaerd: {% trans 'Web Development and Web Design Agency. Websites creation' %}"/>
+    <meta property="og:image" content="http://webmaerd.com/static/images/logo.png" />
+    <meta property="og:title" content="Webmaerd: {% trans 'Web Development and Web Design Agency' %}"/>
     <meta property="og:description" content="{% trans 'Webmaerd is Web Development and Web Design Agency. Professional websites creation at a reasonable price in a short time. We deal with modern and professional sites development for small and medium business. Additional services provided: Domains and Hosting support.' %}"/>
     <meta property="og:url" content="http://webmaerd.com" />
     <!-- Twitter Card -->
-    <meta property="twitter:image" content="/static/images/logo.png" />
-    <meta property="twitter:title" content="Webmaerd: {% trans 'Web Development and Web Design Agency. Websites creation' %}"/>
+    <meta property="twitter:image" content="http://webmaerd.com/static/images/logo.png" />
+    <meta property="twitter:title" content="Webmaerd: {% trans 'Web Development and Web Design Agency' %}"/>
     <meta property="twitter:description" content="{% trans 'Webmaerd is Web Development and Web Design Agency. Professional websites creation at a reasonable price in a short time. We deal with modern and professional sites development for small and medium business. Additional services provided: Domains and Hosting support.' %}"/>
-    <meta property="twitter:site" content="http://webmaerd.com" />
+    <meta name="twitter:site" content="http://webmaerd.com" />
 
     <title>Webmaerd: {% trans "Web Development and Web Design Agency. Websites creation" %}</title>
 
