--- a/webmaerd/templates/base/base.html
+++ b/webmaerd/templates/base/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 {% include "base/head.html" %}
 <body>
+{% include "base/external_code.html" %}
 <div class="wrapper">
      <div id="pre-loader">
         <img src="/static/images/pre-loader/loader-01.svg" alt="pre-loader">
